@@ -17,10 +17,10 @@ class MethodCallTest {
     private Configuration configuration;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         configuration = new Configuration();
         configuration.registerFunction("abs",
-                (context, args) -> args.get(0).evaluateToObject(context).asNumber().map(TemplateNumber::abs).orElseThrow());
+                (context, args) -> args.getFirst().evaluateToObject(context).asNumber().map(TemplateNumber::abs).orElseThrow());
         configuration.registerFunction("avg",
                 (context, args) -> args.stream().map(o -> o.evaluate(context, TemplateNumber.class))
                         .reduce(TemplateNumber::add).orElseThrow().divide(new TemplateNumber(args.size())));
